Bug 237170 - Insert File functionality not implemented
Summary: Insert File functionality not implemented
Status: VERIFIED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-10 23:08 UTC by Sabine Faure
Modified: 2010-05-11 18:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-05-10 23:08:16 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Create a .txt file (with kwrite for example)
- Launch Kmail
- Click on 'New' button
- Go to Message menu/Insert File...
- Select a .txt file on your HD
- Click on 'Ok'

Nothing happens

Trunk, Svn Rev 1125132
Comment 1 Thomas McGuire 2010-05-11 01:56:20 UTC
SVN commit 1125214 by tmcguire:

Port the insert file command.

BUG: 237170

 M  +14 -64    kmail/kmcomposewin.cpp  
 M  +1 -0      messagecomposer/CMakeLists.txt  
 A             messagecomposer/inserttextfilejob.cpp   [License: LGPL (v2.1+)]
 A             messagecomposer/inserttextfilejob.h   [License: LGPL (v2.1+)]


WebSVN link: http://websvn.kde.org/?view=rev&revision=1125214
Comment 2 Sabine Faure 2010-05-11 18:47:33 UTC
It is corrected now.

The text from the text file is inserted in the text editor (Composer dialogue) as plain text.

Trunk, Svn Rev 1125510