Port the insert file command.

BUG: 237170

svn path=/trunk/KDE/kdepim/messagecomposer/; revision=1125214